@@ -477,38 +477,59 @@ public final class UnicodeUtil {
     int utf8Upto = utf8.offset;
     final byte[] bytes = utf8.bytes;
     final int utf8Limit = utf8.offset + utf8.length;
+    UTF8CodePointState state = new UTF8CodePointState();
     while (utf8Upto < utf8Limit) {
-      final int numBytes = utf8CodeLength[bytes[utf8Upto] & 0xFF];
-      int v = 0;
-      switch (numBytes) {
-        case 1:
-          ints[utf32Count++] = bytes[utf8Upto++];
-          continue;
-        case 2:
-          // 5 useful bits
-          v = bytes[utf8Upto++] & 31;
-          break;
-        case 3:
-          // 4 useful bits
-          v = bytes[utf8Upto++] & 15;
-          break;
-        case 4:
-          // 3 useful bits
-          v = bytes[utf8Upto++] & 7;
-          break;
-        default:
-          throw new IllegalArgumentException("invalid utf8");
-      }
-
-      // TODO: this may read past utf8's limit.
-      final int limit = utf8Upto + numBytes - 1;
-      while (utf8Upto < limit) {
-        v = v << 6 | bytes[utf8Upto++] & 63;
-      }
-      ints[utf32Count++] = v;
+      UTF8CodePointAt(bytes, utf8Upto, state);
+      ints[utf32Count++] = state.codePoint;
+      utf8Upto += state.codePointBytes;
     }
 
     return utf32Count;
+  }
+
+  /**
+   * Computes the codepoint and codepoint length (in bytes) of the specified {@code offset} in the
+   * provided {@code utf8} {@link BytesRef}, assuming UTF8 encoding. Note that {@code offset} is
+   * always zero-based, not relative to {@link BytesRef#offset}. As with other related methods in
+   * this class, this assumes valid UTF8 input and <strong>does not perform</strong> full UTF8
+   * validation.
+   *
+   * @throws IllegalArgumentException If invalid codepoint header byte occurs or the content is
+   *     prematurely truncated.
+   */
+  public static void UTF8CodePointAt(BytesRef utf8, int offset, UTF8CodePointState state) {
+    UTF8CodePointAt(utf8.bytes, utf8.offset + offset, state);
+  }
+
+  private static void UTF8CodePointAt(byte[] utf8, int pos, UTF8CodePointState state) {
+    int leadByte = utf8[pos] & 0xFF;
+    int numBytes = utf8CodeLength[leadByte];
+    state.codePointBytes = numBytes;
+    int v;
+    switch (numBytes) {
+      case 1 -> {
+        state.codePoint = leadByte;
+        return;
+      }
+      case 2 -> v = leadByte & 31; // 5 useful bits
+      case 3 -> v = leadByte & 15; // 4 useful bits
+      case 4 -> v = leadByte & 7; // 3 useful bits
+      default -> throw new IllegalArgumentException("invalid utf8");
+    }
+
+    // TODO: this may read past utf8's limit.
+    final int limit = pos + numBytes;
+    pos++;
+    while (pos < limit) {
+      v = v << 6 | utf8[pos++] & 63;
+    }
+    state.codePoint = v;
+  }
+
+  /** Holds a Unicode codepoint along with the number of bytes required to represent it in UTF8 */
+  public static final class UTF8CodePointState {
+    public int codePoint;
+    public int codePointBytes;
   }
 
   /** Shift value for lead surrogate to form a supplementary character. */
