@@ -16,22 +16,27 @@
  */
 package org.apache.lucene.util.automaton;
 
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.IdentityHashMap;
 import org.apache.lucene.util.ArrayUtil;
 import org.apache.lucene.util.BytesRef;
-import org.apache.lucene.util.CharsRef;
-import org.apache.lucene.util.CharsRefBuilder;
+import org.apache.lucene.util.BytesRefBuilder;
+import org.apache.lucene.util.BytesRefIterator;
+import org.apache.lucene.util.UnicodeUtil;
 
 /**
  * Builds a minimal, deterministic {@link Automaton} that accepts a set of strings using the
  * algorithm described in <a href="https://aclanthology.org/J00-1002.pdf">Incremental Construction
  * of Minimal Acyclic Finite-State Automata by Daciuk, Mihov, Watson and Watson</a>. This requires
- * sorted input data, but is very fast (nearly linear with the input size).
+ * sorted input data, but is very fast (nearly linear with the input size). Also offers the ability
+ * to directly build a binary {@link Automaton} representation.
  *
+ * @see #build(Collection)
+ * @see #build(Collection, boolean)
+ * @see #build(BytesRefIterator, boolean)
  * @see Automata#makeStringUnion(Collection)
  */
 final class StringsToAutomaton {
@@ -176,64 +181,16 @@ final class StringsToAutomaton {
   /** Root automaton state. */
   private final State root = new State();
 
-  /** Previous sequence added to the automaton in {@link #add(CharsRef)}. */
-  private CharsRefBuilder previous;
+  /** Used for input order checking (only through assertions right now) */
+  private BytesRefBuilder previous;
 
-  /** A comparator used for enforcing sorted UTF8 order, used in assertions only. */
-  @SuppressWarnings("deprecation")
-  private static final Comparator<CharsRef> comparator = CharsRef.getUTF16SortedAsUTF8Comparator();
-
-  /**
-   * Add another character sequence to this automaton. The sequence must be lexicographically larger
-   * or equal compared to any previous sequences added to this automaton (the input must be sorted).
-   */
-  private void add(CharsRef current) {
-    if (current.length > Automata.MAX_STRING_UNION_TERM_LENGTH) {
-      throw new IllegalArgumentException(
-          "This builder doesn't allow terms that are larger than 1,000 characters, got " + current);
+  /** Copy <code>current</code> into an internal buffer. */
+  private boolean setPrevious(BytesRef current) {
+    if (previous == null) {
+      previous = new BytesRefBuilder();
     }
-    assert stateRegistry != null : "Automaton already built.";
-    assert previous == null || comparator.compare(previous.get(), current) <= 0
-        : "Input must be in sorted UTF-8 order: " + previous + " >= " + current;
-    assert setPrevious(current);
-
-    // Descend in the automaton (find matching prefix).
-    int pos = 0, max = current.length();
-    State state = root;
-    for (; ; ) {
-      assert pos <= max;
-      if (pos == max) {
-        break;
-      }
-
-      int codePoint = Character.codePointAt(current, pos);
-      State next = state.lastChild(codePoint);
-      if (next == null) {
-        break;
-      }
-
-      state = next;
-      pos += Character.charCount(codePoint);
-    }
-
-    if (state.hasChildren()) replaceOrRegister(state);
-
-    addSuffix(state, current, pos);
-  }
-
-  /**
-   * Finalize the automaton and return the root state. No more strings can be added to the builder
-   * after this call.
-   *
-   * @return Root automaton state.
-   */
-  private State complete() {
-    if (this.stateRegistry == null) throw new IllegalStateException();
-
-    if (root.hasChildren()) replaceOrRegister(root);
-
-    stateRegistry = null;
-    return root;
+    previous.copyBytes(current);
+    return true;
   }
 
   /** Internal recursive traversal for conversion. */
@@ -259,38 +216,126 @@ final class StringsToAutomaton {
   }
 
   /**
-   * Build a minimal, deterministic automaton from a sorted list of {@link BytesRef} representing
-   * strings in UTF-8. These strings must be binary-sorted.
+   * Called after adding all terms. Performs final minimization and converts to a standard {@link
+   * Automaton} instance.
    */
-  static Automaton build(Collection<BytesRef> input) {
-    final StringsToAutomaton builder = new StringsToAutomaton();
+  private Automaton completeAndConvert() {
+    // Final minimization:
+    if (this.stateRegistry == null) throw new IllegalStateException();
+    if (root.hasChildren()) replaceOrRegister(root);
+    stateRegistry = null;
 
-    CharsRefBuilder current = new CharsRefBuilder();
-    for (BytesRef b : input) {
-      current.copyUTF8Bytes(b);
-      builder.add(current.get());
-    }
-
+    // Convert:
     Automaton.Builder a = new Automaton.Builder();
-    convert(a, builder.complete(), new IdentityHashMap<>());
-
+    convert(a, root, new IdentityHashMap<>());
     return a.finish();
   }
 
-  /** Copy <code>current</code> into an internal buffer. */
-  private boolean setPrevious(CharsRef current) {
-    if (previous == null) {
-      previous = new CharsRefBuilder();
+  /**
+   * Build a minimal, deterministic automaton from a sorted list of {@link BytesRef} representing
+   * strings in UTF-8. These strings must be binary-sorted. Creates an {@link Automaton} with UTF-8
+   * codepoints as transition labels.
+   */
+  static Automaton build(Collection<BytesRef> input) {
+    return build(input, false);
+  }
+
+  /**
+   * Build a minimal, deterministic automaton from a sorted list of {@link BytesRef} representing
+   * strings in UTF-8. These strings must be binary-sorted. Creates an {@link Automaton} with either
+   * UTF-8 codepoints as transition labels or binary (compiled) transition labels based on {@code
+   * asBinary}.
+   */
+  static Automaton build(Collection<BytesRef> input, boolean asBinary) {
+    final StringsToAutomaton builder = new StringsToAutomaton();
+
+    for (BytesRef b : input) {
+      builder.add(b, asBinary);
     }
-    previous.copyChars(current);
-    return true;
+
+    return builder.completeAndConvert();
+  }
+
+  /**
+   * Build a minimal, deterministic automaton from a sorted list of {@link BytesRef} representing
+   * strings in UTF-8. These strings must be binary-sorted. Creates an {@link Automaton} with either
+   * UTF-8 codepoints as transition labels or binary (compiled) transition labels based on {@code
+   * asBinary}.
+   */
+  static Automaton build(BytesRefIterator input, boolean asBinary) throws IOException {
+    final StringsToAutomaton builder = new StringsToAutomaton();
+
+    for (BytesRef b = input.next(); b != null; b = input.next()) {
+      builder.add(b, asBinary);
+    }
+
+    return builder.completeAndConvert();
+  }
+
+  private void add(BytesRef current, boolean asBinary) {
+    if (current.length > Automata.MAX_STRING_UNION_TERM_LENGTH) {
+      throw new IllegalArgumentException(
+          "This builder doesn't allow terms that are larger than "
+              + Automata.MAX_STRING_UNION_TERM_LENGTH
+              + " characters, got "
+              + current);
+    }
+    assert stateRegistry != null : "Automaton already built.";
+    assert previous == null || previous.get().compareTo(current) <= 0
+        : "Input must be in sorted UTF-8 order: " + previous.get() + " >= " + current;
+    assert setPrevious(current);
+
+    // Reusable state information if we're building a non-binary based automaton
+    UnicodeUtil.UTF8CodePointState scratchState = null;
+    if (asBinary == false) {
+      scratchState = new UnicodeUtil.UTF8CodePointState();
+    }
+
+    // Descend in the automaton (find matching prefix).
+    int pos = 0, max = current.length;
+    State next, state = root;
+    if (asBinary) {
+      while (pos < max
+          && (next = state.lastChild(current.bytes[current.offset + pos] & 0xff)) != null) {
+        state = next;
+        pos++;
+      }
+    } else {
+      while (pos < max) {
+        UnicodeUtil.UTF8CodePointAt(current, pos, scratchState);
+        next = state.lastChild(scratchState.codePoint);
+        if (next == null) {
+          break;
+        }
+        state = next;
+        pos += scratchState.codePointBytes;
+      }
+    }
+
+    if (state.hasChildren()) replaceOrRegister(state);
+
+    // Add suffix
+    if (asBinary) {
+      while (pos < max) {
+        state = state.newState(current.bytes[current.offset + pos] & 0xff);
+        pos++;
+      }
+    } else {
+      while (pos < max) {
+        assert scratchState != null;
+        UnicodeUtil.UTF8CodePointAt(current, pos, scratchState);
+        state = state.newState(scratchState.codePoint);
+        pos += scratchState.codePointBytes;
+      }
+    }
+    state.is_final = true;
   }
 
   /**
    * Replace last child of <code>state</code> with an already registered state or stateRegistry the
    * last child state.
    */
-  private void replaceOrRegister(State state) {
+  protected void replaceOrRegister(State state) {
     final State child = state.lastChild();
 
     if (child.hasChildren()) replaceOrRegister(child);
@@ -301,19 +346,5 @@ final class StringsToAutomaton {
     } else {
       stateRegistry.put(child, child);
     }
-  }
-
-  /**
-   * Add a suffix of <code>current</code> starting at <code>fromIndex</code> (inclusive) to state
-   * <code>state</code>.
-   */
-  private void addSuffix(State state, CharSequence current, int fromIndex) {
-    final int len = current.length();
-    while (fromIndex < len) {
-      int cp = Character.codePointAt(current, fromIndex);
-      state = state.newState(cp);
-      fromIndex += Character.charCount(cp);
-    }
-    state.is_final = true;
   }
 }
