@@ -16,26 +16,138 @@
  */
 package org.apache.lucene.util.automaton;
 
+import com.carrotsearch.randomizedtesting.RandomizedTest;
+import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Set;
 import org.apache.lucene.tests.util.LuceneTestCase;
+import org.apache.lucene.tests.util.TestUtil;
 import org.apache.lucene.util.ArrayUtil;
 import org.apache.lucene.util.BytesRef;
+import org.apache.lucene.util.BytesRefBuilder;
+import org.apache.lucene.util.BytesRefIterator;
+import org.apache.lucene.util.IntsRef;
+import org.apache.lucene.util.fst.Util;
 
 public class TestStringsToAutomaton extends LuceneTestCase {
 
-  public void testLargeTerms() {
+  public void testBasic() throws Exception {
+    List<BytesRef> terms = basicTerms();
+    Collections.sort(terms);
+
+    Automaton a = build(terms, false);
+    checkAutomaton(terms, a, false);
+  }
+
+  public void testBasicBinary() throws Exception {
+    List<BytesRef> terms = basicTerms();
+    Collections.sort(terms);
+
+    Automaton a = build(terms, true);
+    checkAutomaton(terms, a, true);
+  }
+
+  public void testRandomUnicodeOnly() throws Exception {
+    testRandom(false);
+  }
+
+  public void testRandomBinary() throws Exception {
+    testRandom(true);
+  }
+
+  public void testLargeTerms() throws Exception {
     byte[] b10k = new byte[10_000];
     Arrays.fill(b10k, (byte) 'a');
     IllegalArgumentException e =
         expectThrows(
             IllegalArgumentException.class,
-            () -> StringsToAutomaton.build(Collections.singleton(new BytesRef(b10k))));
+            () -> build(Collections.singleton(new BytesRef(b10k)), false));
     assertTrue(
         e.getMessage()
-            .startsWith("This builder doesn't allow terms that are larger than 1,000 characters"));
+            .startsWith(
+                "This builder doesn't allow terms that are larger than "
+                    + StringsToAutomaton.MAX_TERM_LENGTH
+                    + " characters"));
 
     byte[] b1k = ArrayUtil.copyOfSubArray(b10k, 0, 1000);
-    StringsToAutomaton.build(Collections.singleton(new BytesRef(b1k))); // no exception
+    build(Collections.singleton(new BytesRef(b1k)), false); // no exception
+  }
+
+  private void testRandom(boolean allowBinary) throws Exception {
+    int iters = RandomizedTest.isNightly() ? 50 : 10;
+    for (int i = 0; i < iters; i++) {
+      int size = random().nextInt(500, 2_000);
+      Set<BytesRef> terms = new HashSet<>(size);
+      for (int j = 0; j < size; j++) {
+        if (allowBinary && random().nextInt(10) < 2) {
+          // Sometimes random bytes term that isn't necessarily valid unicode
+          terms.add(newBytesRef(TestUtil.randomBinaryTerm(random())));
+        } else {
+          terms.add(newBytesRef(TestUtil.randomRealisticUnicodeString(random())));
+        }
+      }
+
+      List<BytesRef> sorted = terms.stream().sorted().toList();
+      Automaton a = build(sorted, allowBinary);
+      checkAutomaton(sorted, a, allowBinary);
+    }
+  }
+
+  private void checkAutomaton(List<BytesRef> expected, Automaton a, boolean isBinary) {
+    CompiledAutomaton c = new CompiledAutomaton(a, true, false, isBinary);
+    ByteRunAutomaton runAutomaton = c.runAutomaton;
+
+    for (BytesRef t : expected) {
+      String readable = isBinary ? t.toString() : t.utf8ToString();
+      assertTrue(
+          readable + " should be found but wasn't", runAutomaton.run(t.bytes, t.offset, t.length));
+    }
+
+    BytesRefBuilder scratch = new BytesRefBuilder();
+    FiniteStringsIterator it = new FiniteStringsIterator(c.automaton);
+    for (IntsRef r = it.next(); r != null; r = it.next()) {
+      BytesRef t = Util.toBytesRef(r, scratch);
+      assertTrue(expected.contains(t));
+    }
+  }
+
+  private List<BytesRef> basicTerms() {
+    List<BytesRef> terms = new ArrayList<>();
+    terms.add(newBytesRef("dog"));
+    terms.add(newBytesRef("day"));
+    terms.add(newBytesRef("dad"));
+    terms.add(newBytesRef("cats"));
+    terms.add(newBytesRef("cat"));
+    return terms;
+  }
+
+  private Automaton build(Collection<BytesRef> terms, boolean asBinary) throws IOException {
+    if (random().nextBoolean()) {
+      return StringsToAutomaton.build(terms, asBinary);
+    } else {
+      return StringsToAutomaton.build(new TermIterator(terms), asBinary);
+    }
+  }
+
+  private static class TermIterator implements BytesRefIterator {
+    private final Iterator<BytesRef> it;
+
+    TermIterator(Collection<BytesRef> terms) {
+      this.it = terms.iterator();
+    }
+
+    @Override
+    public BytesRef next() throws IOException {
+      if (it.hasNext() == false) {
+        return null;
+      }
+      return it.next();
+    }
   }
 }
